--- a/src/observer/ChatWindow.form
+++ b/src/observer/ChatWindow.form
@@ -47,7 +47,7 @@
                   <Component id="jTextField_Input" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jButton_Enviar" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="130" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -62,6 +62,7 @@
       <SubComponents>
         <Component class="javax.swing.JTextArea" name="jTextArea_Output">
           <Properties>
+            <Property name="editable" type="boolean" value="false"/>
             <Property name="columns" type="int" value="20"/>
             <Property name="rows" type="int" value="5"/>
           </Properties>
